Changed the change file.

--- a/src/main/resources/assets/stevescarts/lang/change.txt
+++ b/src/main/resources/assets/stevescarts/lang/change.txt
@@ -213,103 +213,103 @@ item.SC2:ModularCart.name=steves_vehicles:item.vehicle:cart.name
 
 # Modules
 item.SC2:unknownmodule.name=steves_vehicles:item.common:unknown_module.name
-item.SC2:wooden_hull.name=steves_vehicles:cart.hulls:wooden_hull.name
-item.SC2:standard_hull.name=steves_vehicles:cart.hulls:standard_hull.name
-item.SC2:reinforced_hull.name=steves_vehicles:cart.hulls:reinforced_hull.name
-item.SC2:galgadorian_hull.name=steves_vehicles:cart.hulls:galgadorian_hull.name
-item.SC2:pumpkin_chariot.name=steves_vehicles:cart.hulls:pumpkin_chariot.name
-item.SC2:mechanical_pig.name=steves_vehicles:cart.hulls:mechanical_pig.name
-item.SC2:creative_hull.name=steves_vehicles:cart.hulls:creative_hull.name
-item.SC2:tiny_coal_engine.name=steves_vehicles:common.engines:tiny_coal_engine.name
-item.SC2:basic_solar_engine.name=steves_vehicles:common.engines:basic_solar_engine.name
-item.SC2:thermal_engine.name=steves_vehicles:common.engines:thermal_engine.name
-item.SC2:coal_engine.name=steves_vehicles:common.engines:coal_engine.name
-item.SC2:solar_engine.name=steves_vehicles:common.engines:solar_engine.name
-item.SC2:advanced_thermal_engine.name=steves_vehicles:common.engines:advanced_thermal_engine.name
-item.SC2:compact_solar_engine.name=steves_vehicles:common.engines:compact_solar_engine.name
-item.SC2:creative_engine.name=steves_vehicles:common.engines:creative_engine.name
-item.SC2:iron_drill.name=steves_vehicles:cart.tools:iron_drill.name
-item.SC2:basic_drill.name=steves_vehicles:cart.tools:basic_drill.name
-item.SC2:hardened_drill.name=steves_vehicles:cart.tools:hardened_drill.name
-item.SC2:galgadorian_drill.name=steves_vehicles:cart.tools:galgadorian_drill.name
-item.SC2:basic_wood_cutter.name=steves_vehicles:cart.tools:basic_wood_cutter.name
-item.SC2:hardened_wood_cutter.name=steves_vehicles:cart.tools:hardened_wood_cutter.name
-item.SC2:galgadorian_wood_cutter.name=steves_vehicles:cart.tools:galgadorian_wood_cutter.name
-item.SC2:basic_farmer.name=steves_vehicles:cart.tools:basic_farmer.name
-item.SC2:galgadorian_farmer.name=steves_vehicles:cart.tools:galgadorian_farmer.name
-item.SC2:side_chests.name=steves_vehicles:common.chests:side_chests.name
-item.SC2:top_chest.name=steves_vehicles:common.chests:top_chest.name
-item.SC2:front_chest.name=steves_vehicles:common.chests:front_chest.name
-item.SC2:internal_storage.name=steves_vehicles:common.chests:internal_storage.name
-item.SC2:extracting_chests.name=steves_vehicles:common.chests:extracting_chests.name
-item.SC2:egg_basket.name=steves_vehicles:common.chests:egg_basket.name
-item.SC2:gift_storage.name=steves_vehicles:common.chests:gift_storage.name
-item.SC2:side_tanks.name=steves_vehicles:common.tanks:side_tanks.name
-item.SC2:top_tank.name=steves_vehicles:common.tanks:top_tank.name
-item.SC2:front_tank.name=steves_vehicles:common.tanks:front_tank.name
-item.SC2:open_tank.name=steves_vehicles:common.tanks:open_tank.name
-item.SC2:internal_tank.name=steves_vehicles:common.tanks:internal_tank.name
-item.SC2:advanced_tank.name=steves_vehicles:common.tanks:advanced_tank.name
-item.SC2:creative_tank.name=steves_vehicles:common.tanks:creative_tank.name
-item.SC2:shooter.name=steves_vehicles:common.shooters:shooter.name
-item.SC2:advanced_shooter.name=steves_vehicles:common.shooters:advanced_shooter.name
-item.SC2:entity_detector_animal.name=steves_vehicles:common.shooters:entity_detector_animal.name
-item.SC2:entity_detector_player.name=steves_vehicles:common.shooters:entity_detector_player.name
-item.SC2:entity_detector_villager.name=steves_vehicles:common.shooters:entity_detector_villager.name
-item.SC2:entity_detector_monster.name=steves_vehicles:common.shooters:entity_detector_monster.name
-item.SC2:entity_detector_bat.name=steves_vehicles:common.shooters:entity_detector_bat.name
-item.SC2:projectile_potion.name=steves_vehicles:common.shooters:projectile_potion.name
-item.SC2:projectile_fire_charge.name=steves_vehicles:common.shooters:projectile_fire_charge.name
-item.SC2:projectile_egg.name=steves_vehicles:common.shooters:projectile_egg.name
-item.SC2:projectile_snowball.name=steves_vehicles:common.shooters:projectile_snowball.name
-item.SC2:projectile_cake.name=steves_vehicles:common.shooters:projectile_cake.name
-item.SC2:liquid_sensors.name=steves_vehicles:cart.drill_utility:liquid_sensors.name
-item.SC2:incinerator.name=steves_vehicles:cart.drill_utility:incinerator.name
-item.SC2:creative_incinerator.name=steves_vehicles:cart.drill_utility:creative_incinerator.name
-item.SC2:drill_intelligence.name=steves_vehicles:cart.drill_utility:drill_intelligence.name
-item.SC2:ore_extractor.name=steves_vehicles:cart.drill_utility:ore_extractor.name
-item.SC2:railer.name=steves_vehicles:cart.rails:railer.name
-item.SC2:large_railer.name=steves_vehicles:cart.rails:large_railer.name
-item.SC2:torch_placer.name=steves_vehicles:cart.rails:torch_placer.name
-item.SC2:bridge_builder.name=steves_vehicles:cart.rails:bridge_builder.name
-item.SC2:track_remover.name=steves_vehicles:cart.rails:track_remover.name
-item.SC2:height_controller.name=steves_vehicles:cart.rails:height_controller.name
-item.SC2:crop_nether_wart.name=steves_vehicles:cart.cultivation:crop_nether_wart.name
-item.SC2:hydrator.name=steves_vehicles:cart.cultivation:hydrator.name
-item.SC2:fertilizer.name=steves_vehicles:cart.cultivation:fertilizer.name
-item.SC2:lawn_mower.name=steves_vehicles:cart.cultivation:lawn_mower.name
-item.SC2:tree_exotic.name=steves_vehicles:cart.cultivation:tree_exotic.name
-item.SC2:planter_range_extender.name=steves_vehicles:cart.cultivation:planter_range_extender.name
-item.SC2:seat.name=steves_vehicles:common.travel:seat.name
-item.SC2:steves_arcade.name=steves_vehicles:common.travel:steves_arcade.name
-item.SC2:cage.name=steves_vehicles:common.travel:cage.name
-item.SC2:colorizer.name=steves_vehicles:common.visual:colorizer.name
-item.SC2:color_randomizer.name=steves_vehicles:common.visual:color_randomizer.name
-item.SC2:invisibility_core.name=steves_vehicles:common.visual:invisibility_core.name
-item.SC2:firework_display.name=steves_vehicles:common.visual:firework_display.name
-item.SC2:note_sequencer.name=steves_vehicles:common.visual:note_sequencer.name
-item.SC2:information_provider.name=steves_vehicles:common.visual:information_provider.name
-item.SC2:brake_handle.name=steves_vehicles:cart.travel:brake_handle.name
-item.SC2:advanced_control_system.name=steves_vehicles:cart.travel:advanced_control_system.name
-item.SC2:melter.name=steves_vehicles:common.temperature:melter.name
-item.SC2:extreme_melter.name=steves_vehicles:common.temperature:extreme_melter.name
-item.SC2:freezer.name=steves_vehicles:common.temperature:freezer.name
-item.SC2:cleaning_machine.name=steves_vehicles:cart.cleaning:cleaning_machine.name
-item.SC2:liquid_cleaner.name=steves_vehicles:cart.cleaning:liquid_cleaner.name
-item.SC2:experience_bank.name=steves_vehicles:cart.cleaning:experience_bank.name
-item.SC2:power_observer.name=steves_vehicles:common.util:power_observer.name
-item.SC2:enchanter.name=steves_vehicles:common.util:enchanter.name
-item.SC2:creative_supplies.name=steves_vehicles:common.util:creative_supplies.name
-item.SC2:cake_server.name=steves_vehicles:common.cake:cake_server.name
-item.SC2:trick_or_treat_cake_server.name=steves_vehicles:common.cake:trick_or_treat_cake_server.name
-item.SC2:dynamite_carrier.name=steves_vehicles:common.independence:dynamite_carrier.name
-item.SC2:divine_shield.name=steves_vehicles:common.independence:divine_shield.name
-item.SC2:chunk_loader.name=steves_vehicles:common.independence:chunk_loader.name
-item.SC2:crafter.name=steves_vehicles:common.production:crafter.name
-item.SC2:smelter.name=steves_vehicles:common.production:smelter.name
-item.SC2:advanced_crafter.name=steves_vehicles:common.production:advanced_crafter.name
-item.SC2:advanced_smelter.name=steves_vehicles:common.production:advanced_smelter.name
-item.SC2:milker.name=steves_vehicles:common.production:milker.name
+item.SC2:wooden_hull.name=steves_vehicles:item.cart.hulls:wooden_hull.name
+item.SC2:standard_hull.name=steves_vehicles:item.cart.hulls:standard_hull.name
+item.SC2:reinforced_hull.name=steves_vehicles:item.cart.hulls:reinforced_hull.name
+item.SC2:galgadorian_hull.name=steves_vehicles:item.cart.hulls:galgadorian_hull.name
+item.SC2:pumpkin_chariot.name=steves_vehicles:item.cart.hulls:pumpkin_chariot.name
+item.SC2:mechanical_pig.name=steves_vehicles:item.cart.hulls:mechanical_pig.name
+item.SC2:creative_hull.name=steves_vehicles:item.cart.hulls:creative_hull.name
+item.SC2:tiny_coal_engine.name=steves_vehicles:item.common.engines:tiny_coal_engine.name
+item.SC2:basic_solar_engine.name=steves_vehicles:item.common.engines:basic_solar_engine.name
+item.SC2:thermal_engine.name=steves_vehicles:item.common.engines:thermal_engine.name
+item.SC2:coal_engine.name=steves_vehicles:item.common.engines:coal_engine.name
+item.SC2:solar_engine.name=steves_vehicles:item.common.engines:solar_engine.name
+item.SC2:advanced_thermal_engine.name=steves_vehicles:item.common.engines:advanced_thermal_engine.name
+item.SC2:compact_solar_engine.name=steves_vehicles:item.common.engines:compact_solar_engine.name
+item.SC2:creative_engine.name=steves_vehicles:item.common.engines:creative_engine.name
+item.SC2:iron_drill.name=steves_vehicles:item.cart.tools:iron_drill.name
+item.SC2:basic_drill.name=steves_vehicles:item.cart.tools:basic_drill.name
+item.SC2:hardened_drill.name=steves_vehicles:item.cart.tools:hardened_drill.name
+item.SC2:galgadorian_drill.name=steves_vehicles:item.cart.tools:galgadorian_drill.name
+item.SC2:basic_wood_cutter.name=steves_vehicles:item.cart.tools:basic_wood_cutter.name
+item.SC2:hardened_wood_cutter.name=steves_vehicles:item.cart.tools:hardened_wood_cutter.name
+item.SC2:galgadorian_wood_cutter.name=steves_vehicles:item.cart.tools:galgadorian_wood_cutter.name
+item.SC2:basic_farmer.name=steves_vehicles:item.cart.tools:basic_farmer.name
+item.SC2:galgadorian_farmer.name=steves_vehicles:item.cart.tools:galgadorian_farmer.name
+item.SC2:side_chests.name=steves_vehicles:item.common.chests:side_chests.name
+item.SC2:top_chest.name=steves_vehicles:item.common.chests:top_chest.name
+item.SC2:front_chest.name=steves_vehicles:item.common.chests:front_chest.name
+item.SC2:internal_storage.name=steves_vehicles:item.common.chests:internal_storage.name
+item.SC2:extracting_chests.name=steves_vehicles:item.common.chests:extracting_chests.name
+item.SC2:egg_basket.name=steves_vehicles:item.common.chests:egg_basket.name
+item.SC2:gift_storage.name=steves_vehicles:item.common.chests:gift_storage.name
+item.SC2:side_tanks.name=steves_vehicles:item.common.tanks:side_tanks.name
+item.SC2:top_tank.name=steves_vehicles:item.common.tanks:top_tank.name
+item.SC2:front_tank.name=steves_vehicles:item.common.tanks:front_tank.name
+item.SC2:open_tank.name=steves_vehicles:item.common.tanks:open_tank.name
+item.SC2:internal_tank.name=steves_vehicles:item.common.tanks:internal_tank.name
+item.SC2:advanced_tank.name=steves_vehicles:item.common.tanks:advanced_tank.name
+item.SC2:creative_tank.name=steves_vehicles:item.common.tanks:creative_tank.name
+item.SC2:shooter.name=steves_vehicles:item.common.shooters:shooter.name
+item.SC2:advanced_shooter.name=steves_vehicles:item.common.shooters:advanced_shooter.name
+item.SC2:entity_detector_animal.name=steves_vehicles:item.common.shooters:entity_detector_animal.name
+item.SC2:entity_detector_player.name=steves_vehicles:item.common.shooters:entity_detector_player.name
+item.SC2:entity_detector_villager.name=steves_vehicles:item.common.shooters:entity_detector_villager.name
+item.SC2:entity_detector_monster.name=steves_vehicles:item.common.shooters:entity_detector_monster.name
+item.SC2:entity_detector_bat.name=steves_vehicles:item.common.shooters:entity_detector_bat.name
+item.SC2:projectile_potion.name=steves_vehicles:item.common.shooters:projectile_potion.name
+item.SC2:projectile_fire_charge.name=steves_vehicles:item.common.shooters:projectile_fire_charge.name
+item.SC2:projectile_egg.name=steves_vehicles:item.common.shooters:projectile_egg.name
+item.SC2:projectile_snowball.name=steves_vehicles:item.common.shooters:projectile_snowball.name
+item.SC2:projectile_cake.name=steves_vehicles:item.common.shooters:projectile_cake.name
+item.SC2:liquid_sensors.name=steves_vehicles:item.cart.drill_utility:liquid_sensors.name
+item.SC2:incinerator.name=steves_vehicles:item.cart.drill_utility:incinerator.name
+item.SC2:creative_incinerator.name=steves_vehicles:item.cart.drill_utility:creative_incinerator.name
+item.SC2:drill_intelligence.name=steves_vehicles:item.cart.drill_utility:drill_intelligence.name
+item.SC2:ore_extractor.name=steves_vehicles:item.cart.drill_utility:ore_extractor.name
+item.SC2:railer.name=steves_vehicles:item.cart.rails:railer.name
+item.SC2:large_railer.name=steves_vehicles:item.cart.rails:large_railer.name
+item.SC2:torch_placer.name=steves_vehicles:item.cart.rails:torch_placer.name
+item.SC2:bridge_builder.name=steves_vehicles:item.cart.rails:bridge_builder.name
+item.SC2:track_remover.name=steves_vehicles:item.cart.rails:track_remover.name
+item.SC2:height_controller.name=steves_vehicles:item.cart.rails:height_controller.name
+item.SC2:crop_nether_wart.name=steves_vehicles:item.cart.cultivation:crop_nether_wart.name
+item.SC2:hydrator.name=steves_vehicles:item.cart.cultivation:hydrator.name
+item.SC2:fertilizer.name=steves_vehicles:item.cart.cultivation:fertilizer.name
+item.SC2:lawn_mower.name=steves_vehicles:item.cart.cultivation:lawn_mower.name
+item.SC2:tree_exotic.name=steves_vehicles:item.cart.cultivation:tree_exotic.name
+item.SC2:planter_range_extender.name=steves_vehicles:item.cart.cultivation:planter_range_extender.name
+item.SC2:seat.name=steves_vehicles:item.common.travel:seat.name
+item.SC2:steves_arcade.name=steves_vehicles:item.common.travel:steves_arcade.name
+item.SC2:cage.name=steves_vehicles:item.common.travel:cage.name
+item.SC2:colorizer.name=steves_vehicles:item.common.visual:colorizer.name
+item.SC2:color_randomizer.name=steves_vehicles:item.common.visual:color_randomizer.name
+item.SC2:invisibility_core.name=steves_vehicles:item.common.visual:invisibility_core.name
+item.SC2:firework_display.name=steves_vehicles:item.common.visual:firework_display.name
+item.SC2:note_sequencer.name=steves_vehicles:item.common.visual:note_sequencer.name
+item.SC2:information_provider.name=steves_vehicles:item.common.visual:information_provider.name
+item.SC2:brake_handle.name=steves_vehicles:item.cart.travel:brake_handle.name
+item.SC2:advanced_control_system.name=steves_vehicles:item.cart.travel:advanced_control_system.name
+item.SC2:melter.name=steves_vehicles:item.common.temperature:melter.name
+item.SC2:extreme_melter.name=steves_vehicles:item.common.temperature:extreme_melter.name
+item.SC2:freezer.name=steves_vehicles:item.common.temperature:freezer.name
+item.SC2:cleaning_machine.name=steves_vehicles:item.cart.cleaning:cleaning_machine.name
+item.SC2:liquid_cleaner.name=steves_vehicles:item.cart.cleaning:liquid_cleaner.name
+item.SC2:experience_bank.name=steves_vehicles:item.cart.cleaning:experience_bank.name
+item.SC2:power_observer.name=steves_vehicles:item.common.util:power_observer.name
+item.SC2:enchanter.name=steves_vehicles:item.common.util:enchanter.name
+item.SC2:creative_supplies.name=steves_vehicles:item.common.util:creative_supplies.name
+item.SC2:cake_server.name=steves_vehicles:item.common.cake:cake_server.name
+item.SC2:trick_or_treat_cake_server.name=steves_vehicles:item.common.cake:trick_or_treat_cake_server.name
+item.SC2:dynamite_carrier.name=steves_vehicles:item.common.independence:dynamite_carrier.name
+item.SC2:divine_shield.name=steves_vehicles:item.common.independence:divine_shield.name
+item.SC2:chunk_loader.name=steves_vehicles:item.common.independence:chunk_loader.name
+item.SC2:crafter.name=steves_vehicles:item.common.production:crafter.name
+item.SC2:smelter.name=steves_vehicles:item.common.production:smelter.name
+item.SC2:advanced_crafter.name=steves_vehicles:item.common.production:advanced_crafter.name
+item.SC2:advanced_smelter.name=steves_vehicles:item.common.production:advanced_smelter.name
+item.SC2:milker.name=steves_vehicles:item.common.production:milker.name
 
 # Components
 item.SC2:unknowncomponent.name=steves_vehicles:item.component:unknown_component.name
