--- a/src/main/resources/assets/stevescarts/lang/es_ES.lang
+++ b/src/main/resources/assets/stevescarts/lang/es_ES.lang
@@ -1,163 +1,230 @@
 # ======================================
-                                BLOCK GUI
+#				CREATIVE TAB
+# ======================================
+
+# ======================================
+#				BLOCK GUI
 # ======================================
 
 # Cart assembler gui localization
-gui.SC2:cartAssembler=Cesta ensamblador
-gui.SC2:basicAssembleInstruction=Para empezar a hacer una compra, por favor, añadir un carrito de casco de su elección a la ranura del casco.
-gui.SC2:invalidHullError=El carro del casco añadido a la ranura del casco no es un casco válida. Esto no debería ser posible por lo que probablemente ha hecho algo extraño.
-gui.SC2:hullCapacity=capacidad del casco
-gui.SC2:complexityCap=tapa de complejidad
-gui.SC2:totalCost=costo total
-gui.SC2:totalTime=Tiempo total
-gui.SC2:readyMessage=Listo para ensamblar el carro!
-gui.SC2:assembleProgress=Progreso
-gui.SC2:timeLeft=Tiempo restante
-gui.SC2:idleAssemblerMessage=El montador es actualmente inactivo
-gui.SC2:modifyCart=Modificar cesta
-gui.SC2:assembleCart=Ensamble cesta
-gui.SC2:fuelLevel=El nivel de combustible
+steves_vehicles:gui.assembler:title=Cesta ensamblador
+steves_vehicles:gui.assembler:basic_instruction=Para empezar a hacer una compra, por favor, añadir un carrito de casco de su elección a la ranura del casco.
+steves_vehicles:gui.assembler:invalid_hull=El carro del casco añadido a la ranura del casco no es un casco válida. Esto no debería ser posible por lo que probablemente ha hecho algo extraño.
+steves_vehicles:gui.assembler:hull_capacity=capacidad del casco
+steves_vehicles:gui.assembler:complexity_cap=tapa de complejidad
+steves_vehicles:gui.assembler:total_cost=costo total
+steves_vehicles:gui.assembler:total_time=Tiempo total
+steves_vehicles:gui.assembler:ready_message=Listo para ensamblar el carro!
+steves_vehicles:gui.assembler:progress=Progreso
+steves_vehicles:gui.assembler:time_left=Tiempo restante
+steves_vehicles:gui.assembler:idle_message=El montador es actualmente inactivo
+steves_vehicles:gui.assembler:modify_vehicle=Modificar cesta
+steves_vehicles:gui.assembler:assemble_vehicle=Ensamble cesta
+steves_vehicles:gui.assembler:fuel_level=El nivel de combustible
 
 
 # Cargo manager and Liquid manager shared gui localization
-gui.SC2:manager=Gerente
-gui.SC2:currentSetting=Actualmente
-gui.SC2:changeTransferDirection=Cambiar la dirección de la transferencia
-gui.SC2:directionToCart=Para el carro
-gui.SC2:directionFromCart=Desde el carro
-gui.SC2:changeTurnBack=Cambie volver ajustes
-gui.SC2:turnBackDisabled=Ningún equipo seleccionado
-gui.SC2:turnBack=Gire de nuevo después de la transferencia
-gui.SC2:continueForward=Continuar a lo largo después de la transferencia
-gui.SC2:changeTransferSize=Cambiar tamaño de la transferencia
-gui.SC2:changeSide=cambie lado
-gui.SC2:currentSide=lateral actual
-gui.SC2:sideRed=Rojo
-gui.SC2:sideBlue=Azul
-gui.SC2:sideYellow=Amarillo
-gui.SC2:sideGreen=Verde
-gui.SC2:sideDisabled=discapacitado
+steves_vehicles:gui.manager:tile=Gerente
+steves_vehicles:gui.manager:current_setting=Actualmente
+steves_vehicles:gui.manager:change_transfer_direction=Cambiar la dirección de la transferencia
+steves_vehicles:gui.manager:to_vehicle=Para el carro
+steves_vehicles:gui.manager:from_vehicle=Desde el carro
+steves_vehicles:gui.manager:change_turn_back=Cambie volver ajustes
+steves_vehicles:gui.manager:turn_back_disabled=Ningún equipo seleccionado
+steves_vehicles:gui.manager:turn_back=Gire de nuevo después de la transferencia
+steves_vehicles:gui.manager:continue_forward=Continuar a lo largo después de la transferencia
+steves_vehicles:gui.manager:change_transfer_size=Cambiar tamaño de la transferencia
+steves_vehicles:gui.manager:change_side=cambie lado
+steves_vehicles:gui.manager:current_side=lateral actual
+steves_vehicles:gui.manager:red_side=Rojo
+steves_vehicles:gui.manager:blue_side=Azul
+steves_vehicles:gui.manager:yellow_side=Amarillo
+steves_vehicles:gui.manager:green_side=Verde
+steves_vehicles:gui.manager:disabled_side=discapacitado
 
 # Cargo manager gui localization
-gui.SC2:cargoManager=Charge
-gui.SC2:changeSlotLayout=Cambiar la apariencia de la ranura
-gui.SC2:layoutShared=Todas las ranuras son compartidos por todos los lados
-gui.SC2:layoutSide=Cada lado tiene sus propias ranuras
-gui.SC2:layoutColor=Cada color tiene sus propias ranuras
-gui.SC2:transferAll=Transferencia tanto como sea posible
-gui.SC2:transferItems=Transferir un máximo de [%1] [%2:material|materiales]
-gui.SC2:transferStacks=Transferir un máximo de [%1] [%2:pila|pilas]
-gui.SC2:transferAllShort=MAX
-gui.SC2:transferItemsShort=M
-gui.SC2:transferStacksShort=P
-gui.SC2:changeTransferCartArea=Cambiar parte de la cesta
-gui.SC2:unknownAreaMessage=opción desconocida
-gui.SC2:cartAreaAll=Todas las ranuras
-gui.SC2:cartAreaEngine=Motor
-gui.SC2:cartAreaRailer=Railers
-gui.SC2:cartAreaStorage=ranuras de almacenamiento
-gui.SC2:cartAreaTorches=Linternas
-gui.SC2:cartAreaExplosives=Explosivos
-gui.SC2:cartAreaArrows=flechas
-gui.SC2:cartAreaBridge=material de Puente
-gui.SC2:cartAreaSeeds=Semillas
-gui.SC2:cartAreaFertilizer=Fertilizante
-gui.SC2:cartAreaSaplings=Plantones
-gui.SC2:cartAreaFirework=Firework
-gui.SC2:cartAreaBuckets=Cucharones (por ordeñador)
-gui.SC2:cartAreaCakes=Tortas
+steves_vehicles:gui.cargo:title=Charge
+steves_vehicles:gui.cargo:change_layout=Cambiar la apariencia de la ranura
+steves_vehicles:gui.cargo:shared_layout=Todas las ranuras son compartidos por todos los lados
+steves_vehicles:gui.cargo:side_layout=Cada lado tiene sus propias ranuras
+steves_vehicles:gui.cargo:color_layout=Cada color tiene sus propias ranuras
+steves_vehicles:gui.cargo:transfer_all=Transferencia tanto como sea posible
+steves_vehicles:gui.cargo:transfer_items=Transferir un máximo de [%1] [%2:material|materiales]
+steves_vehicles:gui.cargo:transfer_stacks=Transferir un máximo de [%1] [%2:pila|pilas]
+steves_vehicles:gui.cargo:transfer_all_short=MAX
+steves_vehicles:gui.cargo:transfer_items_short=M
+steves_vehicles:gui.cargo:transfer_stacks_short=P
+steves_vehicles:gui.cargo:change_vehicle_part=Cambiar parte de la cesta
+steves_vehicles:gui.cargo:slot_invalid=opción desconocida
+steves_vehicles:gui.cargo:slot_all=Todas las ranuras
+steves_vehicles:gui.cargo:slot_engine=Motor
+steves_vehicles:gui.cargo:slot_railer=Railers
+steves_vehicles:gui.cargo:slot_storage=ranuras de almacenamiento
+steves_vehicles:gui.cargo:slot_torch=Linternas
+steves_vehicles:gui.cargo:slot_explosive=Explosivos
+steves_vehicles:gui.cargo:slot_arrow=flechas
+steves_vehicles:gui.cargo:slot_bridge=material de Puente
+steves_vehicles:gui.cargo:slot_seed=Semillas
+steves_vehicles:gui.cargo:slot_fertilizer=Fertilizante
+steves_vehicles:gui.cargo:slot_sapling=Plantones
+steves_vehicles:gui.cargo:slot_firework=Firework
+steves_vehicles:gui.cargo:slot_bucket=Cucharones (por ordeñador)
+steves_vehicles:gui.cargo:slot_cake=Tortas
 
 
 
 # Liquid manager gui localization
-gui.SC2:liquidManager=Líquido
-gui.SC2:changeTankLayout=Cambiar el diseño del tanque
-gui.SC2:layoutSharedTanks=Todos los tanques son compartidos por todos los lados
-gui.SC2:layoutSidedTanks=Cada lado tiene su propio tanque
-gui.SC2:layoutColorTanks=Cada color tiene su propio tanque(s)
-gui.SC2:transferAllLiquid=Transferencia tanto como sea posible
-gui.SC2:transferBuckets=Transferencia de un máximo de [%1]
-gui.SC2:transferAllLiquidShort=MAX
-gui.SC2:transferBucketShort=C
+steves_vehicles:gui.liquid:title=Líquido
+steves_vehicles:gui.liquid:change_layout=Cambiar el diseño del tanque
+steves_vehicles:gui.liquid:shared_layout=Todos los tanques son compartidos por todos los lados
+steves_vehicles:gui.liquid:side_layout=Cada lado tiene su propio tanque
+steves_vehicles:gui.liquid:color_layout=Cada color tiene su propio tanque(s)
+steves_vehicles:gui.liquid:transfer_all=Transferencia tanto como sea posible
+steves_vehicles:gui.liquid:transfer_buckets=Transferencia de un máximo de [%1]
+steves_vehicles:gui.liquid:transfer_all_short=MAX
+steves_vehicles:gui.liquid:transfer_buckets_short=C
 
 # Module Toggler gui localization
-gui.SC2:moduleToggler=Módulo Toggler
-gui.SC2:optionDrill=Taladro
-gui.SC2:optionShield=Escudo
-gui.SC2:optionInvisibility=Invisibilidad
-gui.SC2:optionChunk=Chunk carga
-gui.SC2:optionCageAuto=Auto Jaula recoger
-gui.SC2:optionCage=Jaula recoger
-gui.SC2:settingDisabled=Discapacitado
-gui.SC2:settingOrange=dirección naranja
-gui.SC2:settingBlue=dirección azul
-gui.SC2:stateActivate=Activar
-gui.SC2:stateDeactivate=Desactivar
-gui.SC2:stateToggle=palanca
+steves_vehicles:gui.toggler:title=Módulo Toggler
+steves_vehicles:gui.toggler:drill_option=Taladro
+steves_vehicles:gui.toggler:shield_option=Escudo
+steves_vehicles:gui.toggler:invisibility_option=Invisibilidad
+steves_vehicles:gui.toggler:chunk_option=Chunk carga
+steves_vehicles:gui.toggler:auto_cage_option=Auto Jaula recoger
+steves_vehicles:gui.toggler:cage_option=Jaula recoger
+steves_vehicles:gui.toggler:disabled_setting=Discapacitado
+steves_vehicles:gui.toggler:orange_setting=dirección naranja
+steves_vehicles:gui.toggler:blue_setting=dirección azul
+steves_vehicles:gui.toggler:activate_state=Activar
+steves_vehicles:gui.toggler:deactivate_state=Desactivar
+steves_vehicles:gui.toggler:toggle_state=palanca
 
-# External Distributer gui localization
-gui.SC2:externalDistributor=Distribuidor Externo
-gui.SC2:distributorNotConnected=No está conectado a cualquier Gerente!
-gui.SC2:sideName=[%1] lado
-gui.SC2:dropInstruction=Deja aquí para añadir este ajuste
-gui.SC2:removeInstruction=Haga clic derecho para eliminar
-gui.SC2:distributorAll=Todos
-gui.SC2:distributorRed=Rojo
-gui.SC2:distributorBlue=Azul
-gui.SC2:distributorYellow=Amarillo
-gui.SC2:distributorGreen=Verde
-gui.SC2:distributorTopLeft=Arriba a la izquierda
-gui.SC2:distributorTopRight=Arriba a la derecha
-gui.SC2:distributorBottomLeft=Abajo a la izquierda
-gui.SC2:distributorBottomRight=Abajo a la derecha
-gui.SC2:distributorToCart=Para la Cesta
-gui.SC2:distributorFromCart=Desde la Cesta
-gui.SC2:managerTop=Top Gerente
-gui.SC2:managerBot=Fondo Gerente
-gui.SC2:distributorSideOrange=Naranja
-gui.SC2:distributorSidePurple=Púrpura
-gui.SC2:distributorSideYellow=Amarillo
-gui.SC2:distributorSideGreen=Verde
-gui.SC2:distributorSideBlue=Azul
-gui.SC2:distributorSideRed=Rojo
-gui.SC2:sideToolTip=Lado: [%1]
+# External Distributor gui localization
+steves_vehicles:gui.distributor:title=Distribuidor Externo
+steves_vehicles:gui.distributor:not_connected=No está conectado a cualquier Gerente!
+steves_vehicles:gui.distributor:side_name=[%1] lado
+steves_vehicles:gui.distributor:drop_instruction=Deja aquí para añadir este ajuste
+steves_vehicles:gui.distributor:remove_instruction=Haga clic derecho para eliminar
+steves_vehicles:gui.distributor:all=Todos
+steves_vehicles:gui.distributor:red=Rojo
+steves_vehicles:gui.distributor:blue=Azul
+steves_vehicles:gui.distributor:yellow=Amarillo
+steves_vehicles:gui.distributor:green=Verde
+steves_vehicles:gui.distributor:top_left=Arriba a la izquierda
+steves_vehicles:gui.distributor:top_right=Arriba a la derecha
+steves_vehicles:gui.distributor:bottom_left=Abajo a la izquierda
+steves_vehicles:gui.distributor:bottom_right=Abajo a la derecha
+steves_vehicles:gui.distributor:to_vehicle=Para la Cesta
+steves_vehicles:gui.distributor:from_vehicle=Desde la Cesta
+steves_vehicles:gui.distributor:top_manager=Top Gerente
+steves_vehicles:gui.distributor:bottom_manager=Fondo Gerente
+steves_vehicles:gui.distributor:orange=Naranja
+steves_vehicles:gui.distributor:purple=Púrpura
+steves_vehicles:gui.distributor:side_tooltip=Lado: [%1]
 
 # Detector Units gui localization
-gui.SC2:operatorOutput=SALIDA
-gui.SC2:operatorAnd=Y
-gui.SC2:operatorOr=O
-gui.SC2:operatorNot=NO
-gui.SC2:operatorXor=XO
-gui.SC2:operatorTopUnit=Top Unidad
-gui.SC2:operatorBotUnit=Unidad inferior
-gui.SC2:operatorNorthUnit=Unidad Norte
-gui.SC2:operatorWestUnit=Unidad Oeste
-gui.SC2:operatorSouthUnit=Unidad Sur
-gui.SC2:operatorEastUnit=Unidad Este
-gui.SC2:operatorRedstone=Redstone Entrada
-gui.SC2:operatorRedstoneTop=Top Redstone Entrada
-gui.SC2:operatorRedstoneBot=Fondo Redstone entrada
-gui.SC2:operatorRedstoneNorth=Norte Redstone Entrada
-gui.SC2:operatorRedstoneWest=Oeste Redstone Entrada
-gui.SC2:operatorRedstoneSouth=Sur Redstone Entrada
-gui.SC2:operatorRedstoneEast=Este Redstone Entrada
-gui.SC2:stateRails=Tenga suministros ferroviarios
-gui.SC2:stateTorches=Tenga provisiones de la antorcha
-gui.SC2:stateSaplings=Tenga suministros de árboles jóvenes
-gui.SC2:sateSeeds=Tenga suministros de semillas
-gui.SC2:stateBridge=Tenga suministros puente
-gui.SC2:stateProjectiles=Tenga suministros de proyectil
-gui.SC2:stateFertilizing=Han suministros fertilización
-gui.SC2:stateShield=Es escudo activo
-gui.SC2:stateChunk=Es loader trozo activo
-gui.SC2:stateInvisibility=Es fundamental la invisibilidad activo
-gui.SC2:stateDrill=Es taladro activo
-gui.SC2:stateCage=Es auto pick up activo
-gui.SC2:stateStorageFull=Es el almacenamiento completamente lleno
-gui.SC2:stateStorageEmpty=Es el almacenamiento completamente vacío
-gui.SC2:statePassenger=Tiene pasajeros
-gui.SC2:stateAnimal=Tiene pasajeros animales
-gui.SC2:stateTameable=Tiene pasajeros tameable
-gui.SC2:stateBreedable=Tiene pasajeros breedable
-gui.SC2:stateHostile=Tiene pasajeros hostil
-gui.SC2:stateCreeper=Tiene enredadera de pasajeros
+steves_vehicles:gui.detector:output=SALIDA
+steves_vehicles:gui.detector:and=Y
+steves_vehicles:gui.detector:or=O
+steves_vehicles:gui.detector:not=NO
+steves_vehicles:gui.detector:xor=XO
+steves_vehicles:gui.detector:top_unit=Top Unidad
+steves_vehicles:gui.detector:bottom_unit=Unidad inferior
+steves_vehicles:gui.detector:north_unit=Unidad Norte
+steves_vehicles:gui.detector:west_unit=Unidad Oeste
+steves_vehicles:gui.detector:south_unit=Unidad Sur
+steves_vehicles:gui.detector:east_unit=Unidad Este
+steves_vehicles:gui.detector:redstone=Redstone Entrada
+steves_vehicles:gui.detector:top_redstone=Top Redstone Entrada
+steves_vehicles:gui.detector:bottom_redstone=Fondo Redstone entrada
+steves_vehicles:gui.detector:north_redstone=Norte Redstone Entrada
+steves_vehicles:gui.detector:west_redstone=Oeste Redstone Entrada
+steves_vehicles:gui.detector:south_redstone=Sur Redstone Entrada
+steves_vehicles:gui.detector:east_redstone=Este Redstone Entrada
+
+steves_vehicles:gui.state.supplies:rail=Tenga suministros ferroviarios
+steves_vehicles:gui.state.supplies:torch=Tenga provisiones de la antorcha
+steves_vehicles:gui.state.supplies:sapling=Tenga suministros de árboles jóvenes
+steves_vehicles:gui.state.supplies:seed=Tenga suministros de semillas
+steves_vehicles:gui.state.supplies:bridge=Tenga suministros puente
+steves_vehicles:gui.state.supplies:arrow=Tenga suministros de proyectil
+steves_vehicles:gui.state.supplies:fertilizer=Han suministros fertilización
+steves_vehicles:gui.state.activation:shield=Es escudo activo
+steves_vehicles:gui.state.activation:chunk=Es loader trozo activo
+steves_vehicles:gui.state.activation:invisibility=Es fundamental la invisibilidad activo
+steves_vehicles:gui.state.activation:drill=Es taladro activo
+steves_steves_vehicles:gui.state.activation:cage=Es auto pick up activo
+steves_steves_vehicles:gui.state.storage:chest_full=Es el almacenamiento completamente lleno
+steves_steves_vehicles:gui.state.storage:chest_empty=Es el almacenamiento completamente vacío
+steves_vehicles:gui.state.passenger:passenger=Tiene pasajeros
+steves_vehicles:gui.state.passenger:animal=Tiene pasajeros animales
+steves_vehicles:gui.state.passenger:tameable=Tiene pasajeros tameable
+steves_vehicles:gui.state.passenger:breedable=Tiene pasajeros breedable
+steves_vehicles:gui.state.passenger:creeper=Tiene enredadera de pasajeros
+
+
+# ======================================
+#				ITEMS
+# ======================================
+
+# Carts
+
+# Modules
+
+# Components
+
+
+# ======================================
+#				BLOCKS
+# ======================================
+
+
+# Storage
+
+# Upgrades
+
+# Detector Units
+
+
+
+# ======================================
+#				MODULE MISC
+# ======================================
+
+# Categories
+
+# Groups
+
+# Messages
+
+# Labels
+
+# ======================================
+#				UPGRADES
+# ======================================
+
+
+
+# ======================================
+#				MODULES
+# ======================================
+
+# Addons
+
+# Engines
+
+
+# Tanks
+
+# Tools
+
+# Attachments
+
+# ======================================
+#				Steve's Arcade
+# ======================================
+# Ghast Invaders
+
+# Story - The beginning
+
+
